# backgrounder

./: .gitignore  README.md  pyproject.toml
backgrounder/: __init__.py  events.py  exceptions.py  manager.py  models.py  resources.py  task.py  worker.py
backgrounder/fastapi/: deps.py  lifecycle.py  router.py  schemas.py
backgrounder/queue/: base.py  memory.py  redis.py
backgrounder/store/: base.py  sqlite.py
backgrounder/util/: ids.py  time.py
tests/: conftest.py
tests/api/: test_fastapi_api.py  test_lifecycle_paths.py
tests/unit/: test_queue_memory.py  test_store_sqlite.py  test_task_registry_and_adapters.py  test_time_ids_models.py  test_worker_core.py
