[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backgrounder"
version = "0.2.0"
description = "A lightweight job orchestration and execution layer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mohammadreza Farkhondeh", email = "mohammr.farkhonde12@sharif.edu" },
]
dependencies = ["fastapi", "pydantic", "aiosqlite"]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=7.0",
  "pytest-timeout>=2.4",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "coverage[toml]>=7.4",
  "ruff>=0.5",
  "mypy>=1.9",
  "uvicorn>=0.30",
]

[tool.setuptools.packages.find]
# make sure we package the right module
include = ["backgrounder*"]
where = ["."]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config --maxfail=0 --disable-warnings --cov=backgrounder  --cov-branch --cov-report=term-missing --cov-fail-under=100 --timeout=3"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backgrounder"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N"]
ignore = ["E501", "B008", "C901"]
unfixable = ["UP041"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
